--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -165,6 +165,7 @@ body {
 .mySwiper {
 	width: 100%;
 	height: 380px;
+	border-radius: 5px;
 }
 
 /* Custom pagination bullets */
@@ -184,4 +185,16 @@ body {
 	width: 50px !important;
 	height: 10px !important;
 	border-radius: 12.5px !important;
+}
+
+.swiper-button-prev:after,
+.swiper-button-next:after {
+	font-size: 10px !important;
+	font-weight: 800;
+	color: white;
+	font-weight: bolder;
+	animation: pulseAnimation 2s infinite;
+	padding: 12px;
+	border-radius: 2px;
+	background-color: #0d4c3b;
 }
